--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.cows.bulls.bullscows.HelpActivity"
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.cows.bulls.bullscows.Activities.HelpActivity"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     >
