--- a/app/src/main/res/layout/list_item_player.xml
+++ b/app/src/main/res/layout/list_item_player.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:minHeight="?listPreferredItemHeight"
     android:paddingBottom="8dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -15,17 +15,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="72dp"
+        android:layout_gravity="left"
+        android:paddingTop="12dp"
+        android:layout_weight="0.48"
+        android:textAlignment="center"
         android:text="New Text"
-        android:textAppearance="?textAppearanceListItem"
-        tools:text="Example "/>
+        android:textAppearance="?textAppearanceListItem" />
     <TextView
         android:id="@+id/textViewAttempts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="150dp"
+        android:layout_gravity="right"
+        android:layout_weight="0.48"
+        android:paddingTop="12dp"
+        android:textAlignment="center"
         android:text="New Text"
-        android:textAppearance="?textAppearanceListItem"
-        tools:text="Example " />
-</RelativeLayout>
+        android:textAppearance="?textAppearanceListItem" />
+</LinearLayout>
